# codex-loops

./: .credo.exs  .dialyzer_ignore.exs  .formatter.exs  .gitignore  .tool-versions  AGENTS.md  CLAUDE.md  CONTEXT.md  Makefile  README.md  SPEC-DATAFLOW-PROPOSAL.md  SPEC.md  THIRD_PARTY_NOTICES.md  mix.exs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  skills-lock.json
assets/: package-lock.json  package.json
config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
docs/: README.md  cli.md  homebrew-release.md  loop-language-spec.md  operations.md  runtime.md  schemas.md  workflow-authoring.md
examples/: README.md  adr_consensus_repair.exs  budgeted_codebase_onboarding.exs  change_risk_report.exs  current_diff_refine.exs  dependency_upgrade_swarm.exs  flaky_test_hunt.exs  incident_triage_workbench.exs  parameterized_scope_review.exs  release_readiness_panel.exs  reproduction_confidence_pipeline.exs  storage_architecture_decision.exs
native/codex-loops/: Cargo.toml
native/codex-loops/src/: cli.rs  error.rs  install.rs  lifecycle.rs  main.rs  mcp.rs  provider.rs  runtime.rs  sandbox.rs  scheduler.rs
native/codex-loops/src/cli/: output.rs  script.rs
native/codex-loops/src/install/: skill.rs
native/codex-loops/src/lifecycle/: attempt.rs  config.rs  metadata.rs  ownership.rs  process.rs  shutdown.rs  spawn.rs  supervisor.rs
native/codex-loops/src/sandbox/: artifact.rs  cleanup.rs  codex_home.rs  git.rs  mcp_client.rs  scheduler_process.rs
native/codex-loops/src/scheduler/: contracts.rs
native/codex-loops/tests/: cli_contract.rs  mcp_stdio.rs
(+1569 files in other folders)
