[package]
name = "codex-loops"
version = "0.2.7"
edition = "2024"
rust-version = "1.88"
license = "MIT"
description = "Native CLI and MCP control plane for the Codex Loops scheduler"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
fs2 = "0.4"
libc = "0.2"
percent-encoding = "2.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rmcp = { version = "2.2.0", default-features = false, features = ["server", "transport-io"] }
schemars = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.47", features = ["macros", "process", "rt-multi-thread", "signal", "time"] }
url = "2.5"
which = "8.0"

[dev-dependencies]
tempfile = "3.20"
